Some attempt to write a bot like WEBApi (Early scrap version)

--- a/TelegramBotApp/appsettings.json
+++ b/TelegramBotApp/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "ConnectionStrings": {
+    "TelegramBotDB": "Data Source=THUNDERLIGHT; Initial Catalog=TelegramBotDB; Integrated Security=True; TrustServerCertificate=true;"
+  },
+  
+  "TBotToken": "6910313243:AAHbuyghk0HueNL6Xi3AbBS42ybpZHlZZ1M",
+  "Url": ""
+  
 }
