--- a/TelegramBotApp/TelegramBot.App.csproj
+++ b/TelegramBotApp/TelegramBot.App.csproj
@@ -9,14 +9,22 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
       <PackageReference Include="Telegram.Bot" Version="19.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="appsetings.json">
+      <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TelegramBot.Models\TelegramBot.Models.csproj" />
+      <ProjectReference Include="..\TelegramBot.Services\TelegramBot.Services.csproj" />
     </ItemGroup>
 
 </Project>
