--- a/TelegramBot.UnitTests/TelegramBot.UnitTests.csproj
+++ b/TelegramBot.UnitTests/TelegramBot.UnitTests.csproj
@@ -10,11 +10,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
         <PackageReference Include="Moq" Version="4.20.69" />
         <PackageReference Include="Moq.Contrib.HttpClient" Version="1.4.0" />
         <PackageReference Include="Telegram.Bot" Version="19.0.0" />
-        <PackageReference Include="xunit" Version="2.4.2"/>
+        <PackageReference Include="xunit" Version="2.4.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
@@ -28,7 +28,7 @@
     <ItemGroup>
       <ProjectReference Include="..\TelegramBot.Models\TelegramBot.Models.csproj" />
       <ProjectReference Include="..\TelegramBot.Services\TelegramBot.Services.csproj" />
-      <ProjectReference Include="..\TelegramBot.App\TelegramBot.App.csproj" />
+      <ProjectReference Include="..\TelegramBot.BotApp\TelegramBot.BotApp.csproj" />
     </ItemGroup>
 
 </Project>
